# mumbaihacks2025-aletheia

aletheia-backend/: .env.example  .gitignore  ADK_SETUP.md  README.md  main.py  news_classification_distilbert.ipynb  pyproject.toml  test_agent.py  test_google_news.py  train_news_classifier.ipynb
aletheia-backend/services/: agent.py  classifier.py  fact_checker.py  google_news_verifier.py  image_processor.py  misinformation_agent.py
telegram-bot/: .env.example  .gitignore  bot.py  pyproject.toml  requirements.txt
whatsapp-bot/: .env.example  .gitignore  go.mod  go.sum  main.go
